--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
+    "date-fns": "^2.30.0",
     "geist": "^1.0.0",
     "next": "latest",
     "postcss": "8.4.29",
